--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-masonry-css": "^1.0.16",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "@types/styled-components": "^5.1.21",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
+    "autoprefixer": "^10.4.2",
     "eslint": "^7.32.0",
     "eslint-config-next": "12.0.9",
     "eslint-config-prettier": "^8.3.0",
@@ -28,7 +30,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.28.0",
+    "postcss": "^8.4.5",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.18",
     "typescript": "4.5.5"
   }
 }
