--- a/package.json
+++ b/package.json
@@ -8,13 +8,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.8.1",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
+    "axios": "^0.25.0",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "next": "12.0.9",
+    "next-connect": "^0.11.0",
+    "nookies": "^2.5.2",
+    "prisma": "^3.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-masonry-css": "^1.0.16",
-    "styled-components": "^5.3.3"
+    "react-spring": "^9.4.2",
+    "styled-components": "^5.3.3",
+    "uuidv4": "^6.2.12",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "@types/styled-components": "^5.1.21",
